--- a/pages/index.css
+++ b/pages/index.css
@@ -3,10 +3,11 @@
 
 @import url(../blocks/page/page.css);
 
-@import url(../blocks/content/content.css);
-@import url(../blocks/content/__container/content__container.css);
+@import url(../blocks/wrapper/wrapper.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__divider/header__divider.css);
+@import url(../blocks/header/__image/header__image.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
