подключение стилей блока profile

--- a/pages/index.css
+++ b/pages/index.css
@@ -9,5 +9,17 @@
 @import url(../blocks/header/__divider/header__divider.css);
 @import url(../blocks/header/__image/header__image.css);
 
+@import url(../blocks/content/content.css);
+
+@import url(../blocks/profile/profile.css);
+
+@import url(../blocks/profile/__container-info/profile__container-info.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__about/profile__about.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__add-button/__add-button.css);
+@import url(../blocks/profile/__plus-button/profile__plus-button.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
