--- a/pages/index.css
+++ b/pages/index.css
@@ -30,5 +30,14 @@
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
 
+@import url(../blocks/modal/modal.css);
+@import url(../blocks/modal/_active/modal_active.css);
+@import url(../blocks/modal/__title/modal__title.css);
+@import url(../blocks/modal/__container/modal__container.css);
+@import url(../blocks/modal/__form/modal__form.css);
+@import url(../blocks/modal/__input/modal__input.css);
+@import url(../blocks/modal/__submit-button/modal__submit-button.css);
+@import url(../blocks/modal/__close/modal__colse.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
