--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -1,11 +1,15 @@
 .modal__container {
-  width: 430px;
-  height: 330px;
+  margin: 0 59px;
+  padding: 0 36px;
+  max-width: 430px;
+  width: 100%;
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   z-index: 1;
   box-sizing: border-box;
-  padding:  34px 36px 37px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
