--- a/blocks/modal/__input/modal__input.css
+++ b/blocks/modal/__input/modal__input.css
@@ -1,7 +1,7 @@
 .modal__input {
-  padding: 0;
-  width: 358px;
-  height: 27px;
+  padding: 0 0 8px;
+  width: 100%;
+  /* height: 27px; */
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -9,6 +9,10 @@
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal__input:focus {
+  outline: none;
 }
 
 .modal__input:first-child {
