--- a/blocks/modal/__submit-button/modal__submit-button.css
+++ b/blocks/modal/__submit-button/modal__submit-button.css
@@ -1,14 +1,14 @@
 .modal__submit-button {
-  padding: 0;
-  margin: 0 auto;
-  width: 358px;
-  height: 50px;
+  padding: 14px 0;
+  margin: 0 0 37px;
+  width: 100%;
+  /* height: 50px; */
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   color: #FFF;
   background: #000;
-  border: 0;
+  border: none;
   border-radius: 2px;
 }
