--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -1,5 +1,7 @@
 .modal__title {
-  margin: 0 0 54px;
+  margin: 0 0 48px;
+  padding-top: 34px;
+  align-self: flex-start;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
