--- a/blocks/modal/_active/modal_active.css
+++ b/blocks/modal/_active/modal_active.css
@@ -1,11 +1,3 @@
-.modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgb(0 0 0 / 50%);
-  top: 0;
-  right: 0;
+.modal_active {
+  /* display: flex; */
 }
