--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -2,6 +2,7 @@
   padding-left: 0;
   margin: 0;
   display: grid;
-  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, 282px);
   gap: 20px 17px;
+  justify-content: center;
 }
