--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,11 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 767px)  {
+  .footer__copyright {
+    padding: 48px 0 36px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
