--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,8 @@
 .footer {
+  padding: 0 19px;
   width: 100%;
-  max-width: 880px;
+  max-width: calc(880px + 38px);
   display: flex;
   justify-content: flex-start;
+  box-sizing: border-box;
 }
