--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,12 @@
 .header {
-  padding-top: 45px;
+  padding: 45px 19px 0;
   width: 100%;
-  max-width: 880px;
+  max-width: calc(880px + 38px);
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px)  {
+  .header {
+    padding: 28px 0 0;
+  }
 }
