--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -4,3 +4,11 @@
   font-size: 18px;
   line-height: 22px;
 }
+
+@media screen and (max-width: 767px)  {
+  .profile__about {
+    margin: 0 0 30px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
