--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,3 +7,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 767px)  {
+  .profile__add-button {
+    min-width: 100%;
+  }
+}
