--- a/blocks/profile/__pencil-button/profile__pencil-button.css
+++ b/blocks/profile/__pencil-button/profile__pencil-button.css
@@ -2,3 +2,10 @@
   width: 10px;
   height: 10px;
 }
+
+@media screen and (max-width: 767px)  {
+  .profile__pencil-button {
+    width: 8px;
+    height: 8px;
+  }
+}
