--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,19 @@
 .profile {
   padding-top: 40px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 120px minmax(336px, 550px) 150px;
+  grid-template-rows: min-content;
+  column-gap: 30px;
+  justify-items: flex-start;
   align-items: center;
+}
+
+@media screen and (max-width: 767px)  {
+  .profile {
+    padding-top: 42px;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content;
+    column-gap: 0;
+    justify-items: center;
+  }
 }
