--- a/blocks/modal/__close/modal__colse.css
+++ b/blocks/modal/__close/modal__colse.css
@@ -9,3 +9,16 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.modal__close:hover {
+  opacity: 0.6;
+}
+
+@media screen and (max-width: 767px)  {
+  .modal__close {
+    top: -36px;
+    right: 0;
+    height: 20px;
+    width: 20px;
+  }
+}
