--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -13,3 +13,11 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 767px)  {
+  .modal__container {
+    margin: 0 19px;
+    padding: 0 22px;
+  }
+}
+
