--- a/blocks/modal/__submit-button/modal__submit-button.css
+++ b/blocks/modal/__submit-button/modal__submit-button.css
@@ -12,6 +12,10 @@
   border-radius: 2px;
 }
 
+.modal__submit-button:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 767px)  {
   .modal__submit-button {
     margin: 0 0 25px;
