--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -1,7 +1,14 @@
 .cards__like {
-  display: block;
   width: 22px;
   height: 19px;
+  background: none;
+  background-image: url(../../../images/heart.svg);
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  border: none;
+  align-self: center;
 }
 
 .cards__like:hover {
