--- a/blocks/modal/__close/modal__colse.css
+++ b/blocks/modal/__close/modal__colse.css
@@ -4,10 +4,13 @@
   right: -40px;
   height: 32px;
   width: 32px;
+  background: none;
   background-image: url(../../../images/сlose.svg);
   object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
 }
 
 .modal__close:hover {
@@ -20,5 +23,6 @@
     right: 0;
     height: 20px;
     width: 20px;
+    background-image: url(../../../images/close-s.svg);
   }
 }
