--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,11 +1,15 @@
 .profile__add-button {
   min-width: 150px;
   height: 50px;
-  box-sizing: border-box;
+  align-self: center;
+  background: none;
+  background-image: url(../../../images/plus.svg);
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   border: 2px solid #FFF;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
