--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,13 @@
   box-sizing: border-box;
 }
 
+.header::after {
+  content: '';
+  display: block;
+  width: 100%;
+  border-bottom: 1px solid #545454;
+}
+
 @media screen and (max-width: 767px)  {
   .header {
     padding: 28px 0 0;
