--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -1,8 +1,12 @@
 .profile__about {
   margin: 0;
+  max-width: 400px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px)  {
@@ -10,5 +14,11 @@
     margin: 0 0 30px;
     font-size: 14px;
     line-height: 17px;
+  }
+}
+
+@media screen and (max-width: 400px)  {
+  .profile__about {
+    max-width: 282px;
   }
 }
