--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,23 @@
 .profile__name {
   margin: 0 0 10px;
+  max-width: 336px;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px)  {
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+  }
+}
+
+@media screen and (max-width: 400px)  {
+  .profile__name {
+    max-width: 182px;
   }
 }
