--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,5 @@
 .profile__add-button {
+  padding: 0;
   min-width: 150px;
   height: 50px;
   align-self: center;
@@ -18,6 +19,7 @@
 
 @media screen and (max-width: 767px)  {
   .profile__add-button {
+    background-image: url(../../../images/plus-s.svg);
     min-width: 100%;
   }
 }
