--- a/blocks/modal/_active/modal_active.css
+++ b/blocks/modal/_active/modal_active.css
@@ -1,3 +1,6 @@
 .modal_active {
-  display: flex;
+  visibility: visible;
+  z-index: 2;
+  opacity: 1;
+  transition: visibility 0s 0s,opacity 0.5s linear;
 }
