--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,5 +1,5 @@
 .modal {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -8,4 +8,6 @@
   background: rgb(0 0 0 / 50%);
   top: 0;
   right: 0;
+  visibility: hidden;
+  opacity: 0;
 }
