--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,9 @@
 @import url(../blocks/modal/__input/modal__input.css);
 @import url(../blocks/modal/__submit-button/modal__submit-button.css);
 @import url(../blocks/modal/__close/modal__colse.css);
+@import url(../blocks/modal/__container/_image/modal__container_image.css);
+@import url(../blocks/modal/__image-big/modal__image-big.css);
+@import url(../blocks/modal/__image-text/modal__image-text.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
