--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__remove/cards__remove.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
 
 @import url(../blocks/modal/modal.css);
