--- a/blocks/modal/__image-text/modal__image-text.css
+++ b/blocks/modal/__image-text/modal__image-text.css
@@ -2,6 +2,6 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 14.52px;
-  color: #FFFFFF;
-  margin-top: 10px;
+  color: #FFF;
+  margin: 10px 0 0;
 }
