--- a/src/blocks/modal/__container/modal__container.css
+++ b/src/blocks/modal/__container/modal__container.css
@@ -2,6 +2,7 @@
   margin: 0 59px;
   padding: 0 36px;
   max-width: 430px;
+  width: 100%;
   background: #FFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
