--- a/src/blocks/modal/__input/modal__input.css
+++ b/src/blocks/modal/__input/modal__input.css
@@ -1,7 +1,6 @@
 .modal__input {
   padding: 0 0 8px;
   width: 100%;
-  /* height: 27px; */
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -9,22 +8,9 @@
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0;
 }
 
 .modal__input:focus {
   outline: none;
-}
-
-.modal__input:first-child {
-  margin-bottom: 30px;
-}
-
-.modal__input:nth-child(2) {
-  margin-bottom: 48px;
-}
-
-@media screen and (max-width: 767px)  {
-  .modal__input:nth-child(2) {
-    margin-bottom: 42px;
-  }
 }
