--- a/src/blocks/modal/__input-error/modal__input-error.css
+++ b/src/blocks/modal/__input-error/modal__input-error.css
@@ -1,6 +1,8 @@
 .modal__input-error {
+  font-weight: 400;
   font-size: 12px;
-  color: red;
+  line-height: 15px;
+  color: #FF0000;
   opacity: 0;
   position: absolute;
   top: calc(100% + 6px);
