--- a/src/blocks/modal/__input/modal__input.css
+++ b/src/blocks/modal/__input/modal__input.css
@@ -1,5 +1,5 @@
 .modal__input {
-  padding: 0 0 8px;
+  padding: 0 0 13px;
   width: 100%;
   font-weight: 400;
   font-size: 14px;
@@ -13,4 +13,12 @@
 
 .modal__input:focus {
   outline: none;
+}
+
+.modal__input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #C4C4C4;
+
 }
