--- a/src/blocks/modal/__submit-button/_inactive/modal__submit-button_inactive.css
+++ b/src/blocks/modal/__submit-button/_inactive/modal__submit-button_inactive.css
@@ -1,6 +1,20 @@
 .modal__submit-button_inactive {
-  color: #B8B8B8;
-  background: #EDEDED;
   pointer-events: none;
   user-select: none;
+  border: 1px solid#C4C4C4 ;
+  color: #C4C4C4;
+  background: #FFFFFF;
+  border-radius: 2px;
+  margin: 0 0 37px;
+  width: 100%;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+@media screen and (max-width: 767px)  {
+  .modal__submit-button {
+    margin: 0 0 25px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
