--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -33,6 +33,7 @@
 @import url(../blocks/modal/_active/modal_active.css);
 @import url(../blocks/modal/__title/modal__title.css);
 @import url(../blocks/modal/__container/modal__container.css);
+@import url(../blocks/modal/__container/_size/modal__container_size.css);
 @import url(../blocks/modal/__field/modal__field.css);
 @import url(../blocks/modal/__input/modal__input.css);
 @import url(../blocks/modal/__input-error/modal__input-error.css);
