--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,8 @@
 .profile__avatar {
   width: 120px;
   border-radius: 50%;
+  position: relative;
+  z-index: -1;
 }
 
 @media screen and (max-width: 767px)  {
