--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -26,7 +26,9 @@
 @import url(../blocks/cards/__image/cards__image.css);
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__group-like/cards__group-like.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__number-likes/cards__number-likes.css);
 @import url(../blocks/cards/__remove/cards__remove.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
 
